wasm/fastq_exclude_n_compile.log
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/temp_fastq_exclude_n.c:21:12: warning: variable 'okReads' set but not used [-Wunused-but-set-variable]
   21 |   uint64_t okReads = 0, totalReads = 0;
      |            ^
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/temp_fastq_exclude_n.c:21:25: warning: variable 'totalReads' set but not used [-Wunused-but-set-variable]
   21 |   uint64_t okReads = 0, totalReads = 0;
      |                         ^
2 warnings generated.
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/temp_fastq_exclude_n.c:21:12: warning: variable 'okReads' set but not used [-Wunused-but-set-variable]
   21 |   uint64_t okReads = 0, totalReads = 0;
      |            ^
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/temp_fastq_exclude_n.c:21:25: warning: variable 'totalReads' set but not used [-Wunused-but-set-variable]
   21 |   uint64_t okReads = 0, totalReads = 0;
      |                         ^
2 warnings generated.
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_elqjmz3o/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/a0ad7996a2f702f952ffcb83bdb5be1ea86311c4.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/a0ad7996a2f702f952ffcb83bdb5be1ea86311c4.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/943671c4892362c168065c40ae874ac46eb770a7.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/943671c4892362c168065c40ae874ac46eb770a7.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/caa1fc21b0888a091aa12dc549d016f833482c77.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/caa1fc21b0888a091aa12dc549d016f833482c77.json" for subsequent builds)
cache:INFO:  - ok
